modificaciones en textos

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="icon" href="IMG/icona.png">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=IBM+Plex+Sans:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header>
      <div>
         <div class="btn-menu">
-            <label for="btn-menu" class="icon-menu"><img src="IMG/iconMenu.png" alt=""></label>
+            <label for="btn-menu" class="icon-menu"><img src="IMG/iconMenu.png" alt="Menu"></label>
             <input type="checkbox" id="btn-menu">
             <div class="container-menu">
                 <div class="cont-menu">
@@ -63,8 +65,7 @@
     <main>
         <h1 id="main">Dólar hoy: a cuánto cotiza este jueves 29 de octubre</h1>
         <h2 id="main1">FINANZAS 29 Octubre 2020 - 17:15</h2>
-        <h2>El dólar Contado con Liquidación (CCL)
-        </h2>    
+        <h2>El dólar Contado con Liquidación retrocedió 0,7% hasta los $151,22, llevando la brecha al 93%, la cifra más baja desde el 2 de octubre. El "solidario" se mantuvo estable y el mayorista bajó un centavo, en una jornada en la que el BCRA terminó con saldo positivo.</h2>    
     <div id="refmenu">
         <a href="https://www.facebook.com/dialog/feed?app_id=493075857845901&link=https%3A%2F%2Fwww.ambito.com%2Ffinanzas%2Fdolar%2Fhoy-cuanto-cotiza-este-jueves-29-octubre-n5144007&name=D%C3%B3lar%20hoy%3A%20a%20cu%C3%A1nto%20cotiza%20este%20jueves%2029%20de%20octubre&caption=D%C3%B3lar&description=El%20d%C3%B3lar%20Contado%20con%20Liquidaci%C3%B3n%20(CCL)%20&redirect_uri=https%3A%2F%2Fwww.ambito.com%2Ffinanzas%2Fdolar%2Fhoy-cuanto-cotiza-este-jueves-29-octubre-n5144007"><img src="IMG/facebook.png" alt="Facebook" style="height: 40px;"></a>
         <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.ambito.com%2Fc5144007&related=%C3%A1mbito.com&text=D%C3%B3lar+hoy%3A+a+cu%C3%A1nto+cotiza+este+jueves+29+de+octubre&via=Ambitocom"><img src="IMG/twitter.png" alt="Twitter" style="height: 40px;"></a>
@@ -73,7 +74,8 @@
     </div>
     
     <nav>
-        <a href="https://media.ambito.com/p/734fd458b2f0d929d016c766809a80e8/adjuntos/239/imagenes/038/196/0038196241/dolar.jpg"></a><img src="IMG/dolar.jpg" alt="DOLAR">Dólar. Pizabay</a>
+        <a href="https://media.ambito.com/p/734fd458b2f0d929d016c766809a80e8/adjuntos/239/imagenes/038/196/0038196241/dolar.jpg"><img src="IMG/dolar.jpg" alt="DOLAR">Dólar. Pizabay</a>
+
         <hr style="height: 60%;">
     </nav>
 
